test-functional/data/complex-metadata/customField-updated-large-object/v0/objects/LargeCustomObjectTest__c.object
<CustomObject>
    <fields>
        <fullName>Test0000__c</fullName>
        <label>Test</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test0001__c</fullName>
        <label>Test</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test0002__c</fullName>
        <label>Test</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>LargeCustomObjectTest__c</label>
</CustomObject>